# cpp-test

challenges/anagram/: CMakeLists.txt  anagram.cpp  anagram.h  helper.h  main.cpp
challenges/anagram/tests/: CMakeLists.txt  main.cpp
challenges/classroom/: CMakeLists.txt  classroom.cpp  classroom.h  main.cpp  presencelist.cpp  presencelist.h
challenges/classroom/tests/: CMakeLists.txt  main.cpp
challenges/common/: CppTestApp.h  test.h
challenges/csv/: CMakeLists.txt  csv.cpp  csv.h  main.cpp  person.cpp  person.h
challenges/csv/tests/: CMakeLists.txt  main.cpp
challenges/diamonds_in_the_sky/: CMakeLists.txt  diamonds_in_the_sky.cpp
challenges/dirty_bills/: CMakeLists.txt  dirty_bills.cpp  dirty_bills.h  main.cpp
challenges/dirty_bills/tests/: CMakeLists.txt  main.cpp
challenges/palindrome/: CMakeLists.txt  main.cpp  palindrome.cpp  palindrome.h  palindromes.cpp  palindromes.h
challenges/palindrome/tests/: CMakeLists.txt  main.cpp
challenges/stairway_to_heaven/: CMakeLists.txt  StairwayToHeavenApp.cpp  StairwayToHeavenApp.h  main.cpp
challenges/stairway_to_heaven/tests/: CMakeLists.txt  main.cpp
